csv format fix 2

--- a/.ipynb/2017-03-07_pushkin-duels-csv.ipynb
+++ b/.ipynb/2017-03-07_pushkin-duels-csv.ipynb
@@ -71,46 +71,60 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "year,opponent_name,opponent_descr,cause,pushkin_shot,opponent_shot\n",
+      "1816,Paul Hannibal,uncle,during a ball Paul lugged away Pushkin’s girlfriend miss Loshakova,0,0\n",
+      "1817,Pyotr Kaverin,friend,Kaverin’s facetious poem,0,0\n",
+      "1819,Kondratiy Ryleev,poet,Ryleev told a joke about Pushkin at a high society gathering,0,0\n",
+      "1819,Wilhelm Kiichelbecker,frien,funny verses about Küchelbecker,0,1\n",
+      "1819,Modest Korf,Ministry of justice worker,Pushkin’s drunk manservant pestered Korf’s servant who finally beat Pushkin’s servant up,0,0\n",
+      "1819,Denisevich,Major,Pushkin behaved provocatively in theater: he yelled at actors,0,0\n",
+      "1820,Orlov Fedor and Alexey Alexeev,,Orlov and Alexeev reprimanded Pushkin for being drunk and trying to play pool,0,0\n",
+      "1821,Deguilly,French military officer,a quarrel under unclear circumstances,0,0\n",
+      "1822,Semyon Starov,lieutenant colonel,a conflict occurred because of a restaurant orchestra at a casino where both indulged in gambling,1,1\n",
+      "1822,Ivan Lanov,65-year-old state councilor,a quarrel during a holiday dinner,0,0\n",
+      "1822,Todor Balsh,Moldavian nobleman,Balsh’s wife Maria responded to Pushkin’s question in an impolite manner,1,1\n",
+      "1822,Skartla Pruncul,Bessarabian landowner,they were seconds at someone else’s duel and could not agree upon the rules of the duel,0,0\n",
+      "1822,Seweryn Potocki,Active Privy Councillor,discussion about serfdom at the dinner table,0,0\n",
+      "1822,Rutkowski,captain,Pushkin did not believe that a hailstone can weigh up to 3 pounds (which is possible) and made fun of the retired captain,0,0\n",
+      "1822,Inglezi,Chisinau tycoon,Pushkin coveted his wife (a gypsy woman Ludmila Shekora),0,0\n",
+      "1832,Alexander Zubov,General Staff warrant officer,Pushkin had caught Zubov on cheating during a game of cards,0,1\n",
+      "1823,Ivan Rousseau,young writer,Pushkin’s personal dislike for this person,0,0\n",
+      "1826,Nikolay Turgenev,one of the leaders of the Union of Welfare and a member of the Northern Society,0,0\n",
+      "1827,Vladimir Solomirskiy,artillery officer,the officer’s female friend Sofia to whom Pushkin was personally attracted,0,0\n",
+      "1828,Alexander Golitsyn,Minister of Education,Pushkin wrote a bold epigram so the Minister arranged a rough interrogation,0,0\n",
+      "1828,Lagrenée,French Embassy Secretary in St.Petersburg,an unknown girl at a ball,0,0\n",
+      "1829,Mr. Hvostov,Foreign Office worker,Hvostov was dissatisfied by Pushkin’s epigrams,0,0\n",
+      "1836,Nikolay Repin,,Repin was dissatisfied with Pushkin’s poems about him,0,0\n",
+      "1836,Semyon Hlustin,Foreign Office worker,Hlustin did not approve of Pushkin’s poetry,0,0\n",
+      "1836,Vladimir Sollogub,minor Russian writer,Sologub’s unflattering remarks about the poet’s wife Natalia.0,0\n",
+      "1836,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,0,0\n",
+      "1837,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,1,1\n"
+     ]
+    }
+   ],
    "source": [
-    "```\n",
-    "year,opponent_name,opponent_descr,cause,pushkin_shot,opponent_shot\n",
-    "1816,Paul Hannibal,uncle,during a ball Paul lugged away Pushkin’s girlfriend miss Loshakova,0,0\n",
-    "1817,Pyotr Kaverin,friend,Kaverin’s facetious poem,0,0\n",
-    "1819,Kondratiy Ryleev,poet,Ryleev told a joke about Pushkin at a high society gathering,0,0\n",
-    "1819,Wilhelm Kiichelbecker,friend,funny verses about Küchelbecker,0,1\n",
-    "1819,Modest Korf,Ministry of justice worker,Pushkin’s drunk manservant pestered Korf’s servant, who finally beat Pushkin’s servant up,0,0\n",
-    "1819,Denisevich,Major,Pushkin behaved provocatively in theater: he yelled at actors,0,0\n",
-    "1820,Orlov Fedor and Alexey Alexeev,,Orlov and Alexeev reprimanded Pushkin for being drunk and trying to play pool,0,0\n",
-    "1821,Deguilly,French military officer,a quarrel under unclear circumstances,0,0\n",
-    "1822,Semyon Starov,lieutenant colonel,a conflict occurred because of a restaurant orchestra at a casino where both indulged in gambling,1,1\n",
-    "1822,Ivan Lanov,65-year-old state councilor,a quarrel during a holiday dinner,0,0\n",
-    "1822,Todor Balsh,Moldavian nobleman,Balsh’s wife Maria responded to Pushkin’s question in an impolite manner,1,1\n",
-    "1822,Skartla Pruncul,Bessarabian landowner,they were seconds at someone else’s duel and could not agree upon the rules of the duel,0,0\n",
-    "1822,Seweryn Potocki,Active Privy Councillor,discussion about serfdom at the dinner table,0,0\n",
-    "1822,Rutkowski,captain,Pushkin did not believe that a hailstone can weigh up to 3 pounds (which is possible) and made fun of the retired captain,0,0\n",
-    "1822,Inglezi,Chisinau tycoon,Pushkin coveted his wife (a gypsy woman Ludmila Shekora),0,0\n",
-    "1832,Alexander Zubov,General Staff warrant officer,Pushkin had caught Zubov on cheating during a game of cards,0,1\n",
-    "1823,Ivan Rousseau,young writer,Pushkin’s personal dislike for this person,0,0\n",
-    "1826,Nikolay Turgenev,one of the leaders of the Union of Welfare and a member of the Northern Society,0,0\n",
-    "1827,Vladimir Solomirskiy,artillery officer,the officer’s female friend Sofia to whom Pushkin was personally attracted,0,0\n",
-    "1828,Alexander Golitsyn,Minister of Education,Pushkin wrote a bold epigram so the Minister arranged a rough interrogation,0,0\n",
-    "1828,Lagrenée,French Embassy Secretary in St.Petersburg,an unknown girl at a ball,0,0\n",
-    "1829,Mr. Hvostov,Foreign Office worker,Hvostov was dissatisfied by Pushkin’s epigrams,0,0\n",
-    "1836,Nikolay Repin,,Repin was dissatisfied with Pushkin’s poems about him,0,0\n",
-    "1836,Semyon Hlustin,Foreign Office worker,Hlustin did not approve of Pushkin’s poetry,0,0\n",
-    "1836,Vladimir Sollogub,minor Russian writer,Sologub’s unflattering remarks about the poet’s wife Natalia.0,0\n",
-    "1836,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,0,0\n",
-    "1837,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,1,1\n",
-    "```"
+    "import requests\n",
+    "\n",
+    "DUELS_CSV_URL = 'https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/pushkin/duels.csv'\n",
+    "\n",
+    "print(requests.get(DUELS_CSV_URL).text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is also direct link to download <a href=\"https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/pushkin/duels.csv\">Pushkin's duels csv</a>.<br/>\n",
+    "<a href=\"https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/pushkin/duels.csv\">Pushkin's duels csv</a><br/>\n",
     "\n",
     "Source for this data:<br/>\n",
     "https://rinatim.com/2016/12/03/alexander-pushkins-duels/<br/>\n",
@@ -131,12 +145,9 @@
    "source": [
     "from io import StringIO\n",
     "\n",
-    "import requests\n",
     "import pandas as pd\n",
     "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "DUELS_CSV_URL = 'https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/pushkin/duels.csv'"
+    "import plotly.graph_objs as go"
    ]
   },
   {
