russian writers post: csv creation

--- a/.ipynb/2017-03-13_russian-writers-csv.ipynb
+++ b/.ipynb/2017-03-13_russian-writers-csv.ipynb
@@ -62,6 +62,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It was always interesting for me how different russian writers relate to each other.<br/>\n",
+    "For example, could Dostoyevky meet Gogol?<br/>\n",
+    "We are going to create csv with brief info like year of life for all russian writers.<br/>\n",
+    "I did not think too much and just parse <a href=\"https://en.wikipedia.org/wiki/List_of_Russian-language_writers\">appropriate wiki page</a> – thanks to it:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -88,8 +98,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1437\n",
-      "Jurgis Baltrušaitis 1873 1944  poet and translator The Pendulum\n"
+      "name;birth_year;death_year;about;works\n",
+      "Alexander Ablesimov;1742;1783;opera librettist, poet, dramatist, satirist and journalist;\n",
+      "Fyodor Abramov;1920;1983;novelist and short story writer;Two Winters and Three Summers\n",
+      "Grigory Adamov;1886;1945;science fiction writer;The Mystery of the Two Oceans\n",
+      "Georgy Adamovich;1892;1972;poet, critic, memoirist, tanslator;\n",
+      "Alexander Afanasyev;1826;1871;folklorist who recorded and published over 600 Russian folktales and fairytales;Russian Fairy Tales\n",
+      "Alexander Afanasyev-Chuzhbinsky;1816;1875;poet, writer, ethnographer and translator;\n",
+      "Alexander Afinogenov;1904;1941;playwright;A Far Place\n",
+      "M. Ageyev;1898;1973;pseudonymous writer;Cocain Romance\n",
+      "Chinghiz Aitmatov;1928;2008;;Kyrgyz novelist and short story writer,Jamilya,The Day Lasts More Than a Hundred Years\n",
+      "David Aizman;1869;1922;;Russian-Jewish writer and playwright\n",
+      "Bella Akhmadulina;1937;2010;modern poet;The String\n",
+      "Anna Akhmatova;1889;1966;acmeist poet;Requiem\n",
+      "Ivan Aksakov;1823;1886;journalist, slavophile ...\n"
      ]
     }
    ],
@@ -97,7 +119,6 @@
     "import re\n",
     "\n",
     "all_lis = soup.find('div', id='mw-content-text').find_all('li')\n",
-    "print(len(all_lis))\n",
     "lis = [li.text for li in all_lis if re.search(r'> \\(', str(li))]\n",
     "\n",
     "def extract_fields(li):\n",
@@ -114,262 +135,36 @@
     "        \n",
     "    descr = li.partition(')')[2]\n",
     "    descr_parts = re.split(r', (?=[A-Z])', descr)\n",
-    "    descr = descr_parts[0].strip().strip(',')\n",
+    "    descr = descr_parts[0].strip().strip(',.;').strip()\n",
     "\n",
     "    works = ''\n",
     "    if len(descr_parts) > 1:\n",
-    "        works = ', '.join(descr_parts[1:])\n",
+    "        works = ','.join(descr_parts[1:])\n",
     "\n",
-    "    print(name, birth, death, descr, works)\n",
+    "    return name, birth, death, descr, works\n",
     "\n",
-    "extract_fields(lis[55])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['HTML_FORMATTERS',\n",
-       " 'XML_FORMATTERS',\n",
-       " '__bool__',\n",
-       " '__call__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__copy__',\n",
-       " '__delattr__',\n",
-       " '__delitem__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattr__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setitem__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__unicode__',\n",
-       " '__weakref__',\n",
-       " '_all_strings',\n",
-       " '_attr_value_as_string',\n",
-       " '_attribute_checker',\n",
-       " '_find_all',\n",
-       " '_find_one',\n",
-       " '_formatter_for_name',\n",
-       " '_is_xml',\n",
-       " '_lastRecursiveChild',\n",
-       " '_last_descendant',\n",
-       " '_select_debug',\n",
-       " '_selector_combinators',\n",
-       " '_should_pretty_print',\n",
-       " '_tag_name_matches_and',\n",
-       " 'append',\n",
-       " 'attribselect_re',\n",
-       " 'attrs',\n",
-       " 'can_be_empty_element',\n",
-       " 'childGenerator',\n",
-       " 'children',\n",
-       " 'clear',\n",
-       " 'contents',\n",
-       " 'decode',\n",
-       " 'decode_contents',\n",
-       " 'decompose',\n",
-       " 'descendants',\n",
-       " 'encode',\n",
-       " 'encode_contents',\n",
-       " 'extract',\n",
-       " 'fetchNextSiblings',\n",
-       " 'fetchParents',\n",
-       " 'fetchPrevious',\n",
-       " 'fetchPreviousSiblings',\n",
-       " 'find',\n",
-       " 'findAll',\n",
-       " 'findAllNext',\n",
-       " 'findAllPrevious',\n",
-       " 'findChild',\n",
-       " 'findChildren',\n",
-       " 'findNext',\n",
-       " 'findNextSibling',\n",
-       " 'findNextSiblings',\n",
-       " 'findParent',\n",
-       " 'findParents',\n",
-       " 'findPrevious',\n",
-       " 'findPreviousSibling',\n",
-       " 'findPreviousSiblings',\n",
-       " 'find_all',\n",
-       " 'find_all_next',\n",
-       " 'find_all_previous',\n",
-       " 'find_next',\n",
-       " 'find_next_sibling',\n",
-       " 'find_next_siblings',\n",
-       " 'find_parent',\n",
-       " 'find_parents',\n",
-       " 'find_previous',\n",
-       " 'find_previous_sibling',\n",
-       " 'find_previous_siblings',\n",
-       " 'format_string',\n",
-       " 'get',\n",
-       " 'getText',\n",
-       " 'get_text',\n",
-       " 'has_attr',\n",
-       " 'has_key',\n",
-       " 'hidden',\n",
-       " 'index',\n",
-       " 'insert',\n",
-       " 'insert_after',\n",
-       " 'insert_before',\n",
-       " 'isSelfClosing',\n",
-       " 'is_empty_element',\n",
-       " 'known_xml',\n",
-       " 'name',\n",
-       " 'namespace',\n",
-       " 'next',\n",
-       " 'nextGenerator',\n",
-       " 'nextSibling',\n",
-       " 'nextSiblingGenerator',\n",
-       " 'next_element',\n",
-       " 'next_elements',\n",
-       " 'next_sibling',\n",
-       " 'next_siblings',\n",
-       " 'parent',\n",
-       " 'parentGenerator',\n",
-       " 'parents',\n",
-       " 'parserClass',\n",
-       " 'parser_class',\n",
-       " 'prefix',\n",
-       " 'preserve_whitespace_tags',\n",
-       " 'prettify',\n",
-       " 'previous',\n",
-       " 'previousGenerator',\n",
-       " 'previousSibling',\n",
-       " 'previousSiblingGenerator',\n",
-       " 'previous_element',\n",
-       " 'previous_elements',\n",
-       " 'previous_sibling',\n",
-       " 'previous_siblings',\n",
-       " 'quoted_colon',\n",
-       " 'recursiveChildGenerator',\n",
-       " 'renderContents',\n",
-       " 'replaceWith',\n",
-       " 'replaceWithChildren',\n",
-       " 'replace_with',\n",
-       " 'replace_with_children',\n",
-       " 'select',\n",
-       " 'select_one',\n",
-       " 'setup',\n",
-       " 'string',\n",
-       " 'strings',\n",
-       " 'stripped_strings',\n",
-       " 'tag_name_re',\n",
-       " 'text',\n",
-       " 'unwrap',\n",
-       " 'wrap']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(lis[50])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are more than 25 known Pushkin's duels.<br/>\n",
-    "Let's make CSV containing these duels details.<br/>\n",
-    "Here its full content:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "year,opponent_name,opponent_descr,cause,pushkin_shot,opponent_shot\n",
-      "1816,Paul Hannibal,uncle,during a ball Paul lugged away Pushkin’s girlfriend miss Loshakova,0,0\n",
-      "1817,Pyotr Kaverin,friend,Kaverin’s facetious poem,0,0\n",
-      "1819,Kondratiy Ryleev,poet,Ryleev told a joke about Pushkin at a high society gathering,0,0\n",
-      "1819,Wilhelm Kiichelbecker,friend,funny verses about Küchelbecker,0,1\n",
-      "1819,Modest Korf,Ministry of justice worker,Pushkin’s drunk manservant pestered Korf’s servant who finally beat Pushkin’s servant up,0,0\n",
-      "1819,Denisevich,Major,Pushkin behaved provocatively in theater: he yelled at actors,0,0\n",
-      "1820,Orlov Fedor and Alexey Alexeev,,Orlov and Alexeev reprimanded Pushkin for being drunk and trying to play pool,0,0\n",
-      "1821,Deguilly,French military officer,a quarrel under unclear circumstances,0,0\n",
-      "1822,Semyon Starov,lieutenant colonel,a conflict occurred because of a restaurant orchestra at a casino where both indulged in gambling,1,1\n",
-      "1822,Ivan Lanov,65-year-old state councilor,a quarrel during a holiday dinner,0,0\n",
-      "1822,Todor Balsh,Moldavian nobleman,Balsh’s wife Maria responded to Pushkin’s question in an impolite manner,1,1\n",
-      "1822,Skartla Pruncul,Bessarabian landowner,they were seconds at someone else’s duel and could not agree upon the rules of the duel,0,0\n",
-      "1822,Seweryn Potocki,Active Privy Councillor,discussion about serfdom at the dinner table,0,0\n",
-      "1822,Rutkowski,captain,Pushkin did not believe that a hailstone can weigh up to 3 pounds (which is possible) and made fun of the retired captain,0,0\n",
-      "1822,Inglezi,Chisinau tycoon,Pushkin coveted his wife (a gypsy woman Ludmila Shekora),0,0\n",
-      "1832,Alexander Zubov,General Staff warrant officer,Pushkin had caught Zubov on cheating during a game of cards,0,1\n",
-      "1823,Ivan Rousseau,young writer,Pushkin’s personal dislike for this person,0,0\n",
-      "1826,Nikolay Turgenev,one of the leaders of the Union of Welfare and a member of the Northern Society,Tugrenev did not approve of Pushkin’s poem,0,0\n",
-      "1827,Vladimir Solomirskiy,artillery officer,the officer’s female friend Sofia to whom Pushkin was personally attracted,0,0\n",
-      "1828,Alexander Golitsyn,Minister of Education,Pushkin wrote a bold epigram so the Minister arranged a rough interrogation,0,0\n",
-      "1828,Lagrenée,French Embassy Secretary in St.Petersburg,an unknown girl at a ball,0,0\n",
-      "1829,Mr. Hvostov,Foreign Office worker,Hvostov was dissatisfied by Pushkin’s epigrams,0,0\n",
-      "1836,Nikolay Repin,,Repin was dissatisfied with Pushkin’s poems about him,0,0\n",
-      "1836,Semyon Hlustin,Foreign Office worker,Hlustin did not approve of Pushkin’s poetry,0,0\n",
-      "1836,Vladimir Sollogub,minor Russian writer,Sologub’s unflattering remarks about the poet’s wife Natalia,0,0\n",
-      "1836,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,0,0\n",
-      "1837,George d’Anthès,French officer,an anonymous letter which stated that Pushkin’s wife had been cheating on her husband with d’Anthès,1,1\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
+    "lis = [extract_fields(li) for li in lis]\n",
+    "lis = [li for li in lis if not (li[1] == '' and li[2] == '')]\n",
     "\n",
-    "DUELS_CSV_URL = 'https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/pushkin/duels.csv'\n",
+    "columns = ('name', 'birth_year', 'death_year', 'about', 'works')\n",
+    "separator = ';'\n",
     "\n",
-    "print(requests.get(DUELS_CSV_URL).text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a href=\"https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/pushkin/duels.csv\">Pushkin's duels csv</a><br/>\n",
+    "def save_to(s):\n",
+    "    s.write(';'.join(columns))\n",
+    "    s.write('\\n')\n",
+    "    for li in lis:\n",
+    "        s.write(';'.join(li))\n",
+    "        s.write('\\n')\n",
+    "        \n",
+    "from io import StringIO\n",
+    "csv = StringIO()\n",
+    "save_to(csv)\n",
     "\n",
-    "Source for this data:<br/>\n",
-    "https://rinatim.com/2016/12/03/alexander-pushkins-duels/<br/>\n",
-    "http://d-push.net<br/>\n",
-    "https://ru.wikipedia.org/wiki/Пушкин,_Александр_Сергеевич<br/>\n",
+    "# # or local file\n",
+    "# with open('russian-writers.csv', 'w') as f:\n",
+    "#     save_to(f)\n",
     "\n",
-    "And now let's try to use it and plot some visual representation of Pushkin's duels into real shots conversion.<br/>\n",
-    "Starting with imports:"
+    "print(csv.getvalue()[:1000], '...')"
    ]
   },
   {
