--- a/.ipynb/2017-03-13_russian-writers-csv.ipynb
+++ b/.ipynb/2017-03-13_russian-writers-csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -89,9 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -168,18 +169,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/russian/russian-writers.csv\">Russian Writers CSV</a><br/>\n",
+    "<a href=\"https://github.com/boorstat/boorstat-files/blob/master/lit/russian/russian-writers.csv\">The same in github viewer</a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from io import StringIO\n",
-    "\n",
     "import pandas as pd\n",
     "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go"
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "RUS_WITERS_CSV = 'https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/russian/russian-writers.csv'"
    ]
   },
   {
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -204,96 +213,129 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>opponent_name</th>\n",
-       "      <th>opponent_descr</th>\n",
-       "      <th>cause</th>\n",
-       "      <th>pushkin_shot</th>\n",
-       "      <th>opponent_shot</th>\n",
+       "      <th>Task</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>Finish</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1816</td>\n",
-       "      <td>Paul Hannibal</td>\n",
-       "      <td>uncle</td>\n",
-       "      <td>during a ball Paul lugged away Pushkin’s girlf...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Alexander Ablesimov</td>\n",
+       "      <td>1742</td>\n",
+       "      <td>1783.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1817</td>\n",
-       "      <td>Pyotr Kaverin</td>\n",
-       "      <td>friend</td>\n",
-       "      <td>Kaverin’s facetious poem</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Fyodor Abramov</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>1983.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1819</td>\n",
-       "      <td>Kondratiy Ryleev</td>\n",
-       "      <td>poet</td>\n",
-       "      <td>Ryleev told a joke about Pushkin at a high soc...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Grigory Adamov</td>\n",
+       "      <td>1886</td>\n",
+       "      <td>1945.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1819</td>\n",
-       "      <td>Wilhelm Kiichelbecker</td>\n",
-       "      <td>friend</td>\n",
-       "      <td>funny verses about Küchelbecker</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Georgy Adamovich</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>1972.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1819</td>\n",
-       "      <td>Modest Korf</td>\n",
-       "      <td>Ministry of justice worker</td>\n",
-       "      <td>Pushkin’s drunk manservant pestered Korf’s ser...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Alexander Afanasyev</td>\n",
+       "      <td>1826</td>\n",
+       "      <td>1871.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year          opponent_name              opponent_descr  \\\n",
-       "0  1816          Paul Hannibal                       uncle   \n",
-       "1  1817          Pyotr Kaverin                      friend   \n",
-       "2  1819       Kondratiy Ryleev                        poet   \n",
-       "3  1819  Wilhelm Kiichelbecker                      friend   \n",
-       "4  1819            Modest Korf  Ministry of justice worker   \n",
-       "\n",
-       "                                               cause  pushkin_shot  \\\n",
-       "0  during a ball Paul lugged away Pushkin’s girlf...             0   \n",
-       "1                           Kaverin’s facetious poem             0   \n",
-       "2  Ryleev told a joke about Pushkin at a high soc...             0   \n",
-       "3                    funny verses about Küchelbecker             0   \n",
-       "4  Pushkin’s drunk manservant pestered Korf’s ser...             0   \n",
-       "\n",
-       "   opponent_shot  \n",
-       "0              0  \n",
-       "1              0  \n",
-       "2              0  \n",
-       "3              1  \n",
-       "4              0  "
+       "                  Task  Start  Finish\n",
+       "0  Alexander Ablesimov   1742  1783.0\n",
+       "1       Fyodor Abramov   1920  1983.0\n",
+       "2       Grigory Adamov   1886  1945.0\n",
+       "3     Georgy Adamovich   1892  1972.0\n",
+       "4  Alexander Afanasyev   1826  1871.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame.from_csv(StringIO(requests.get(DUELS_CSV_URL).text), index_col=None)\n",
+    "df = pd.DataFrame.from_csv(StringIO(requests.get(RUS_WITERS_CSV).text), index_col=None, sep=';')\n",
+    "df = df[['name', 'birth_year', 'death_year']]\n",
+    "df.rename(columns={'name': 'Task', 'birth_year': 'Start', 'death_year': 'Finish'}, inplace=True)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/16.embed\" height=\"600px\" width=\"900px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.figure_factory as FF\n",
+    "import math\n",
+    "\n",
+    "RUS_WRITERS_FAVS = ['Dostoyevsky', 'Tolstoy', 'Gogol']\n",
+    "\n",
+    "# df = [dict(Task=\"Job A\", Start='2009-01-01', Finish='2009-02-28'),\n",
+    "#       dict(Task=\"Job B\", Start='2009-03-05', Finish='2009-04-15'),\n",
+    "#       dict(Task=\"Job C\", Start='2009-02-20', Finish='2009-05-30')]\n",
+    "df = pd.DataFrame.from_csv(StringIO(requests.get(RUS_WITERS_CSV).text), index_col=None, sep=';')\n",
+    "df = df[['name', 'birth_year', 'death_year']]\n",
+    "df.rename(columns={'name': 'Task', 'birth_year': 'Start', 'death_year': 'Finish'}, inplace=True)\n",
+    "# df['Start'] = df[['Start']].apply(lambda v: print(str(v[0])), axis=1)\n",
+    "# df[:10]\n",
+    "                                  \n",
+    "df['Start'] = df[['Start']].apply(lambda v: '{}-01-01'.format(str(int(v))), axis=1)\n",
+    "df['Finish'] = df[['Finish']].apply(lambda v: '{}-12-31'.format(str(int(v)) if not math.isnan(v) else '2020'), axis=1)\n",
+    "\n",
+    "df = df[df['Task'].map(lambda v: any([w in v for w in RUS_WRITERS_FAVS]))]\n",
+    "df.reset_index(inplace=True)\n",
+    "\n",
+    "def _rename(name):\n",
+    "    parts = '<br>'.join(name.split())\n",
+    "    return '{name}{surname}'.format(\n",
+    "        name='{}<br>'.format(name[0]) if len(parts) > 1 else '',\n",
+    "        surname=parts[-1])\n",
+    "\n",
+    "df['Task'] = df[['Task']].apply(lambda v: '<br>'.join(str(v[0]).split()), axis=1)\n",
+    "\n",
+    "fig = FF.create_gantt(df, showgrid_x=True, showgrid_y=True)\n",
+    "py.iplot(fig, filename='russian-writers-years-of-life', world_readable=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -301,6 +343,160 @@
    "source": [
     "Looks very exciting as for me:)<br/>\n",
     "Time to plot Pushkin's Duels Histogram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>death_year</th>\n",
+       "      <th>about</th>\n",
+       "      <th>works</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alexander Ablesimov</td>\n",
+       "      <td>1742</td>\n",
+       "      <td>1783.0</td>\n",
+       "      <td>opera librettist, poet, dramatist, satirist an...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fyodor Abramov</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>1983.0</td>\n",
+       "      <td>novelist and short story writer</td>\n",
+       "      <td>Two Winters and Three Summers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grigory Adamov</td>\n",
+       "      <td>1886</td>\n",
+       "      <td>1945.0</td>\n",
+       "      <td>science fiction writer</td>\n",
+       "      <td>The Mystery of the Two Oceans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Georgy Adamovich</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>1972.0</td>\n",
+       "      <td>poet, critic, memoirist, tanslator</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alexander Afanasyev</td>\n",
+       "      <td>1826</td>\n",
+       "      <td>1871.0</td>\n",
+       "      <td>folklorist who recorded and published over 600...</td>\n",
+       "      <td>Russian Fairy Tales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alexander Afanasyev-Chuzhbinsky</td>\n",
+       "      <td>1816</td>\n",
+       "      <td>1875.0</td>\n",
+       "      <td>poet, writer, ethnographer and translator</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Alexander Afinogenov</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>1941.0</td>\n",
+       "      <td>playwright</td>\n",
+       "      <td>A Far Place</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M. Ageyev</td>\n",
+       "      <td>1898</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>pseudonymous writer</td>\n",
+       "      <td>Cocain Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Chinghiz Aitmatov</td>\n",
+       "      <td>1928</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kyrgyz novelist and short story writer,Jamilya...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>David Aizman</td>\n",
+       "      <td>1869</td>\n",
+       "      <td>1922.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Russian-Jewish writer and playwright</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              name  birth_year  death_year  \\\n",
+       "0              Alexander Ablesimov        1742      1783.0   \n",
+       "1                   Fyodor Abramov        1920      1983.0   \n",
+       "2                   Grigory Adamov        1886      1945.0   \n",
+       "3                 Georgy Adamovich        1892      1972.0   \n",
+       "4              Alexander Afanasyev        1826      1871.0   \n",
+       "5  Alexander Afanasyev-Chuzhbinsky        1816      1875.0   \n",
+       "6             Alexander Afinogenov        1904      1941.0   \n",
+       "7                        M. Ageyev        1898      1973.0   \n",
+       "8                Chinghiz Aitmatov        1928      2008.0   \n",
+       "9                     David Aizman        1869      1922.0   \n",
+       "\n",
+       "                                               about  \\\n",
+       "0  opera librettist, poet, dramatist, satirist an...   \n",
+       "1                    novelist and short story writer   \n",
+       "2                             science fiction writer   \n",
+       "3                 poet, critic, memoirist, tanslator   \n",
+       "4  folklorist who recorded and published over 600...   \n",
+       "5          poet, writer, ethnographer and translator   \n",
+       "6                                         playwright   \n",
+       "7                                pseudonymous writer   \n",
+       "8                                                NaN   \n",
+       "9                                                NaN   \n",
+       "\n",
+       "                                               works  \n",
+       "0                                                NaN  \n",
+       "1                      Two Winters and Three Summers  \n",
+       "2                      The Mystery of the Two Oceans  \n",
+       "3                                                NaN  \n",
+       "4                                Russian Fairy Tales  \n",
+       "5                                                NaN  \n",
+       "6                                        A Far Place  \n",
+       "7                                     Cocain Romance  \n",
+       "8  Kyrgyz novelist and short story writer,Jamilya...  \n",
+       "9               Russian-Jewish writer and playwright  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[:10]"
    ]
   },
   {
